@@ -1,3 +1,10 @@
+1/30/2006 Bob Rossi <bob@brasko.net>
+
+	* annotate-two/src/annotate.c (handle_exited): Fix compile error.
+	* annotate-two/src/commands.c 
+        (commands_send_source_absolute_source_file): Ditto.
+        * tgdb-base/src/tgdb.c (tgdb_process_console_command): Ditto.
+
 1/19/2006 Bob Rossi <bob@brasko.net>
 
 	* Makefile.in: Autogenerated.
